--- a/client/public/index.html
+++ b/client/public/index.html
@@ -28,5 +28,8 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
       crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/d5e2468329.js"
+      crossorigin="anonymous"></script>
   </body>
 </html>
